# rag-examples

./: .env.example  .gitignore  01_agentic_rag.ipynb  03_evaluacion_neo4j_rag.ipynb  PLANNING.md  README.md  dataset_northwind_full.py  graphrag_evaluator_advanced.py  graphrag_wrapper_naive.py  graphrag_wrapper_standalone.py  pyproject.toml  rag_evaluator.py  requirements.txt  run_notebook.py  test_wrapper.py  universal_rag_evaluator.py
docs/: Guion_v4.md  research_evaluadores_graphrag_avanzados.md  research_framework_evaluacion_rag_langsmith.md  research_graphrag_evaluation.md  research_universal_rag_evaluation.md
models/: confidence_model.json
neo4j_graphrag_tutorial/: docker-compose.yml  requirements.txt
neo4j_graphrag_tutorial/ETL_pipelines/: Dockerfile  entrypoint.sh  main_etl.py
neo4j_graphrag_tutorial/chatbot_backend/: docker-compose.yaml
neo4j_graphrag_tutorial/code/: chatbot.ipynb  ingestion.ipynb
notebooks/: 01_agentic_rag.ipynb  03_evaluacion_neo4j_rag.ipynb  04_comparison.ipynb
rag_eval/: __init__.py
rag_eval/datasets/: __init__.py  got.py  movies.py  northwind.py  northwind_sql.py  northwind_text.txt
rag_eval/evaluators/: __init__.py  base.py  graphrag.py  universal.py
rag_eval/wrappers/: __init__.py  graphrag_always_refuse.py  graphrag_langgraph.py  (+9 more)
results/: sqlrag_agent-northwind_sql.csv  sqlrag_langchain-northwind_sql.csv  sqlrag_no_context-northwind_sql.csv
scripts/: build_northwind_sqlite.py  calibrate_confidence.py  compare_experiments.py  discriminative_power.py  eval_multi_datasets.py  run_eval.py  run_eval_local.py
(+9 files in other folders)
